--- a/web/pom.xml
+++ b/web/pom.xml
@@ -111,14 +111,21 @@
             </dependencies>
         </profile>
         <profile>
-            <id>weblogic</id>
+            <id>weblogic-12.2.1</id>
             <dependencies>
                 <dependency>
+                    <groupId>com.oracle.weblogic</groupId>
+                    <artifactId>weblogic-server-pom</artifactId>
+                    <version>12.1.3-0-0</version>
+                    <type>pom</type>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
                     <groupId>org.jboss.arquillian.container</groupId>
-                    <artifactId>arquillian-wls-remote-12.1</artifactId>
+                    <artifactId>arquillian-wls-remote-12.1.2</artifactId>
                     <version>1.0.0.Alpha3</version>
                     <scope>test</scope>
-                </dependency>
+                </dependency> 
             </dependencies>
             <build>
                 <plugins>
@@ -128,13 +135,49 @@
                         <version>2.18.1</version>
                         <configuration>
                             <systemPropertyVariables>
-                                <arquillian.launch>weblogic</arquillian.launch>
+                                <arquillian.launch>weblogic-12.2.1</arquillian.launch>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
                 </plugins>
             </build>
         </profile>
+        
+        <profile>
+            <id>weblogic-12.1.3</id>
+            <dependencies>
+                <dependency>
+                    <groupId>com.oracle.weblogic</groupId>
+                    <artifactId>weblogic-server-pom</artifactId>
+                    <version>12.1.3-0-0</version>
+                    <type>pom</type>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jboss.arquillian.container</groupId>
+                    <artifactId>arquillian-wls-remote-12.1.2</artifactId>
+                    <version>1.0.0.Alpha3</version>
+                    <scope>test</scope>
+                </dependency> 
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.18.1</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>weblogic-12.1.3</arquillian.launch>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        
+        
+        
     </profiles>
 
 </project>
